Mutation tests are now working. Still need to cover more code with the unit tests